31) Tar autodetect compressed tarballs enabled per default.<br>
32) WebUi spelling/spacing fixes.<br>
33) Add samba v3.3.16. Use CONFIG_USER_SAMBA3 in config-config*.<br>
34) Add /etc/wan_up.sh in internet.sh hook for exec user scripst at physycal connection configured.<br>
35) Fix Multiple SSID work.<br>
36) Add make image mode 2T2R-USB-IPV6 and 2T2R-USB (second without ipv6/tcpdump/zebra/wpasupplicant. With SAMBA3).<br>
37) Some fix build system for more flexible.<br>
38) Now only needed rw images installed to /etc.<br>
39) Fix defines in goahead for support SAMBA3.<br>
40) Rewrite auto mount script. Add auto_swap nvram variable to find and mount swap particion on USB drive(auto_swap 1/0).<br>
41) Add libiconv(need for samba3 utf8->cp866 filenames conversion).<br>
42) samba3 use libiconv without locale support(this is hack for save flash size).<br>
43) Rework lib build system. Fo more easy port new libs.<br>
44) Support ext2 and udf file systems is temporarily disconnected.<br>
43) All fs now mount with noatime option(speedup).<br>
44) rwfs now use bz2 instead gzip.<br>
45) samba3 fix permissions at systems without user named root.<br>
46) Cleanup some nvram defaults and move to romfs target.<br>
47) tune samba3 config for more compat with some MS-WIN apps used file based DB.<br>
48) Try fix regression in ext2 module.<br>
49) Add SmbTimeserver variable for support time server compatable with WinNT(SmbTimeserver variable 0/1 need add WenUI, default 0).<br>
50) Tune kernel for file services as torrent/samba/etc.<br>
51) radvd up to 1.8.1 version.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>