@@ -216,6 +216,7 @@ vpnPassword=vpn_password
 vpnMTU=AUTO
 vpnDGW=1
 vpnPurePPPOE=0
+vpnTestReachable=1
 WatchdogEnabled=0
 CrondEnable=0
 SmbEnabled=0
